@@ -143,17 +143,20 @@ relevant values are returned.)
 [list_end]
 [para]
 
-[call [cmd ::math::statistics::histogram] [arg limits] [arg values]]
+[call [cmd ::math::statistics::histogram] [arg limits] [arg values] [opt weights]]
 Determine histogram information for the given list of data. Returns a
 list consisting of the number of values that fall into each interval.
 (The first interval consists of all values lower than the first limit,
 the last interval consists of all values greater than the last limit.
 There is one more interval than there are limits.)
+[para]
+Optionally, you can use weights to influence the histogram.
 
 [list_begin arguments]
 [arg_def list limits] - List of upper limits (in ascending order) for the
 intervals of the histogram.
 [arg_def list values] - List of data
+[opt_def list weights] - List of weights, one weight per value
 [list_end]
 [para]
 
